--- a/webpagesGL.html
+++ b/webpagesGL.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
     <!--
-      -Name: [Name]
-      -UnityID: [UnityID]
-      -Date: [Date]
-      -Assignment: [Assignment Name]
-      -Description: [Assigment Description]
+      -Name: Lauren Ashley
+      -UnityID: lkashley
+      -Date: 11/16/22
+      -Assignment: Webpages GL
+      -Description: Guided lab assignment, about me webpage
       -->
     <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8" />
-        <link href="style.css" rel="stylesheet" type="text/css" />
-        <title>Your Title Here</title>
+        <link href="webpagesGL.css" rel="stylesheet" type="text/css" />
+        <title>About Lauren Ashley</title>
     </head>
     
     <body>
-    <!-- This is a comment, you should update it to describe parts of your code -->
+    <!-- Header for About me page -->
 
-    <p>This is is a paragraph tag</p>    
+    <h2>About me:<h2>    
 
     </body>
     
