--- a/webpagessGL.html
+++ b/webpagessGL.html
@@ -18,7 +18,7 @@
 
     <h2>Welcome to my About Me page:<h2>
     <hr />
-    <img src="photo_of_me.jpeg" alt="A picture of Lauren">
+    <img src="photo of me.jpeg" alt="A picture of Lauren">
     <p> Hey! My name is Lauren Ashley and I am currently a freshman at NC State University. 
     My intended major is Nuclear Engineering. I am originally from Anderson, SC. 
     Some fun facts about me are that I used to ride horses, I don't like pizza, and I have scoliosis. </p>
